Fixing flickering
No more main area flickering, but there is some issues with the images
flickering in first

--- a/RainDrops/style.css
+++ b/RainDrops/style.css
@@ -6,6 +6,7 @@
 
 #overlay2{
     z-index:5;
+	-webkit-backface-visibility: hidden;
 }
 
 #main1Style  img{
@@ -77,7 +78,6 @@
 	right:0;
 	position:absolute;
 	background:purple;
-	z-index:1;
 }
 
 #Right-container {
